<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.uni_jena.cs.fusion</groupId>
	<artifactId>abecto</artifactId>
	<version>0.3.1-SNAPSHOT</version>

	<name>ABECTO</name>
	<description>An ABox Evaluation and Comparison Tool for Ontologies</description>
	<inceptionYear>2019</inceptionYear>

	<organization>
		<name>Heinz Nixdorf Chair for Distributed Information Systems, Friedrich Schiller University Jena</name>
		<url>http://fusion.cs.uni-jena.de/</url>
	</organization>

	<developers>
		<developer>
			<id>jmkeil</id>
			<name>Jan Martin Keil</name>
			<email>jan-martin.keil@uni-jena.de</email>
		</developer>
	</developers>

	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<packaging>jar</packaging>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<apache.jena.version>4.3.2</apache.jena.version>
		<junit.jupiter.version>5.5.1</junit.jupiter.version>
	</properties>

	<dependencies>
		<dependency>
			<!-- Apache 2.0 -->
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j18-impl</artifactId>
			<version>2.17.1</version>
		</dependency>
		<dependency>
			<!-- Apache 2.0 -->
			<groupId>info.picocli</groupId>
			<artifactId>picocli</artifactId>
			<version>4.6.1</version>
		</dependency>
		<dependency>
			<!-- Apache 2.0 -->
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>30.1.1-jre</version>
		</dependency>
		<dependency>
			<!-- Apache 2.0 -->
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-querybuilder</artifactId>
			<version>${apache.jena.version}</version>
		</dependency>
		<dependency>
			<!-- Apache 2.0 -->
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-arq</artifactId>
			<version>${apache.jena.version}</version>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<!-- Apache 2.0 -->
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-fuseki-main</artifactId>
			<version>${apache.jena.version}</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<!-- solve conflict with wiremock-jre8 -->
					<groupId>org.eclipse.jetty</groupId>
					<artifactId>*</artifactId>
				</exclusion>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<!-- Apache 2.0 -->
			<groupId>de.uni_jena.cs.fusion</groupId>
			<artifactId>similarity.jarowinkler</artifactId>
			<version>1.0.1</version>
		</dependency>
		<dependency>
			<!-- EPL 2.0 -->
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<!-- EPL 2.0 -->
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<!-- Apache 2.0 -->
			<groupId>com.github.tomakehurst</groupId>
			<artifactId>wiremock-jre8</artifactId>
			<version>2.31.0</version>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.slf4j</groupId>
					<artifactId>slf4j-api</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
	</dependencies>

	<build>
		<finalName>abecto</finalName>
		<resources>
			<resource>
				<targetPath>META-INF</targetPath>
				<filtering>false</filtering>
				<directory>${basedir}</directory>
				<includes>
					<include>LICENSE</include>
				</includes>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.2</version>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>11</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>com.mycila</groupId>
				<artifactId>license-maven-plugin</artifactId>
				<version>3.0</version>
				<configuration>
					<header>com/mycila/maven/plugin/license/templates/APACHE-2.txt</header>
					<properties>
						<owner>${project.organization.name}</owner>
						<email>${project.organization.url}</email>
					</properties>
					<excludes>
						<exclude>LICENSE</exclude>
						<exclude>pom.xml</exclude>
						<exclude>.*/**</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<version>2.6.2</version>
				<executions>
					<execution>
						<goals>
							<goal>repackage</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<archive>
						<manifest>
							<mainClass>de.uni_jena.cs.fusion.abecto.Abecto</mainClass>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
